--- a/paper/cfs-model-refs.bib
+++ b/paper/cfs-model-refs.bib
@@ -386,3 +386,14 @@
   year={2011},
   publisher={Princeton University Press}
 }
+
+@article{otto2020,
+  title={Theory in service of narratives in evolution and ecology},
+  author={Otto, Sarah P and Rosales, Alirio},
+  journal={The American Naturalist},
+  volume={195},
+  number={2},
+  pages={290--299},
+  year={2020},
+  publisher={The University of Chicago Press Chicago, IL}
+}
