updated code base

--- a/paper/cfs-model-refs.bib
+++ b/paper/cfs-model-refs.bib
@@ -1,3 +1,35 @@
+@article{aschemann2016,
+  title={Waste not, want not, emit less},
+  author={Aschemann-Witzel, Jessica},
+  journal={Science},
+  volume={352},
+  number={6284},
+  pages={408--409},
+  year={2016},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{marjoram2003,
+  title={Markov chain Monte Carlo without likelihoods},
+  author={Marjoram, Paul and Molitor, John and Plagnol, Vincent and Tavar{\'e}, Simon},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={100},
+  number={26},
+  pages={15324--15328},
+  year={2003},
+  publisher={National Acad Sciences}
+}
+
+@article{beaumont2019,
+  title={Approximate bayesian computation},
+  author={Beaumont, Mark A},
+  journal={Annual review of statistics and its application},
+  volume={6},
+  pages={379--403},
+  year={2019},
+  publisher={Annual Reviews}
+}
+
 @article{hammond2012,
   title={A systems science perspective and transdisciplinary models for food and nutrition security},
   author={Hammond, Ross A and Dub{\'e}, Laurette},
@@ -363,10 +395,62 @@
 
 @misc{AHDBeuroexhange2015,
   title = {{How does the exchange rate affect the GB pig price?}},
-  author = {AHDB},
+  author = {Agricultural and Horticultural Development Board},
   year = {2015},
   howpublished = {\url{https://pork.ahdb.org.uk/prices-stats/news/2015/august/how-does-the-exchange-rate-affect-the-gb-pig-price/}},
   note = {Accessed: 2020-07-08}
+}
+
+@misc{IME2013,
+  title = {{Global food. Waste not, want not.}},
+  author = {Institute of Mechanical Engineers},
+  year = {2013}
+}
+
+@misc{AHDBpocketbook2018,
+  title = {{Pig Pocketbook - 2018}},
+  author = {AHDB},
+  year = {2018}
+}
+
+@misc{AHDBherdnumbers2020,
+  title = {{UK pig numbers and holdings}},
+  author = {AHDB},
+  year = {2020},
+  howpublished = {\url{https://ahdb.org.uk/pork/uk-pig-numbers-and-holdings}},
+  note = {Accessed: 2020-07-08}
+}
+
+@misc{AHDBpigmeatrade,
+  title = {{Pig meat trade}},
+  author = {AHDB},
+  year = {2020},
+  howpublished = {\url{https://ahdb.org.uk/pork/pig-meat-trade}},
+  note = {Accessed: 2020-08-24}
+}
+
+@misc{DEFRAlivestockprices,
+  title = {{Livestock prices, finished and store}},
+  year = {2020},
+  author = {DEFRA},
+  howpublished = {\url{https://www.gov.uk/government/statistics/cattle-sheep-and-pig-slaughter}},
+  note = {Accessed: 2020-08-24}
+}
+
+@misc{DEFRAlivestocknumbers,
+  title = {{Livestock numbers in England and the UK}},
+  year = {2020},
+  author = {DEFRA},
+  howpublished = {\url{https://www.gov.uk/government/statistical-data-sets/structure-of-the-livestock-industry-in-england-at-december}},
+  note = {Accessed: 2020-08-24}
+}
+
+@misc{DEFRApigcattlestats2020,
+  title = {{Latest cattle, sheep and pig slaughter statistics}},
+  year = {2020},
+  author = {DEFRA},
+  howpublished = {\url{https://www.gov.uk/government/statistics/cattle-sheep-and-pig-slaughter}},
+  note = {Accessed: 2020-08-24}
 }
 
 @article{pimm1984,
@@ -396,4 +480,123 @@
   pages={290--299},
   year={2020},
   publisher={The University of Chicago Press Chicago, IL}
+}
+
+@article{ezekiel1938,
+  title={The cobweb theorem},
+  author={Ezekiel, Mordecai},
+  journal={The Quarterly Journal of Economics},
+  volume={52},
+  number={2},
+  pages={255--280},
+  year={1938},
+  publisher={MIT Press}
+}
+
+@article{coase1935,
+  title={Bacon production and the pig-cycle in Great Britain},
+  author={Coase, Ronald H and Fowler, Ronald F},
+  journal={Economica},
+  volume={2},
+  number={6},
+  pages={142--167},
+  year={1935},
+  publisher={JSTOR}
+}
+
+@article{haldane1934,
+  title={A contribution to the theory of price fluctuations},
+  author={Haldane, JBS},
+  journal={The Review of Economic Studies},
+  volume={1},
+  number={3},
+  pages={186--195},
+  year={1934},
+  publisher={JSTOR}
+}
+
+@article{harlow1960,
+  title={The hog cycle and the cobweb theorem},
+  author={Harlow, Arthur A},
+  journal={Journal of Farm Economics},
+  volume={42},
+  number={4},
+  pages={842--853},
+  year={1960},
+  publisher={Oxford University Press}
+}
+
+@article{parker2014,
+  title={On the centenary of the German hog cycle: New findings},
+  author={Parker, Phillip S and Shonkwiler, JS},
+  journal={European Review of Agricultural Economics},
+  volume={41},
+  number={1},
+  pages={47--61},
+  year={2014},
+  publisher={Oxford University Press}
+}
+
+@article{zawadzka2010,
+  title={The history of research on the" pig cycle"},
+  author={Zawadzka, Danuta},
+  journal={Zagadnienia Ekonomiki Rolnej},
+  number={1 Dodatek},
+  year={2010},
+  publisher={-}
+}
+
+@article{nerlove1958,
+  title={Adaptive expectations and cobweb phenomena},
+  author={Nerlove, Marc},
+  journal={The Quarterly Journal of Economics},
+  volume={72},
+  number={2},
+  pages={227--240},
+  year={1958},
+  publisher={MIT Press}
+}
+
+@article{gouel2012,
+  title={Agricultural price instability: a survey of competing explanations and remedies},
+  author={Gouel, Christophe},
+  journal={Journal of economic surveys},
+  volume={26},
+  number={1},
+  pages={129--156},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@article{taylor2006,
+  title={Strategic considerations in the development of lean agri-food supply chains: a case study of the UK pork sector},
+  author={Taylor, David H},
+  journal={Supply Chain Management: An International Journal},
+  year={2006},
+  publisher={Emerald Group Publishing Limited}
+}
+
+@article{dawson2009,
+  title={The UK pig cycle: a spectral analysis},
+  author={Dawson, Philip John},
+  journal={British Food Journal},
+  year={2009},
+  publisher={Emerald Group Publishing Limited}
+}
+
+@techreport{BPEXprofitability2011,
+  title = {{Profitability in the pig supply chain}},
+  author = {British Pig Executive},
+  year = {2011}
+}
+
+@inproceedings{bowman2013,
+  title={Opportunist dealing in the UK pig meat supply chain: Trader mentalities and alternatives},
+  author={Bowman, Andrew and Froud, Julie and Johal, Sukhdev and Leaver, Adam and Williams, Karel},
+  booktitle={Accounting Forum},
+  volume={37},
+  number={4},
+  pages={300--314},
+  year={2013},
+  organization={Elsevier}
 }
