--- a/paper/cfs-model-manuscript.tex
+++ b/paper/cfs-model-manuscript.tex
@@ -47,7 +47,7 @@
 
 \usepackage[textfont=it, labelfont=bf]{caption}
 
-\title{A stylised model of national-level food system security}
+\title{A mathematical model of food system security}
 \author[1]{Conor Goold}
 \affil[1]{Faculty of Biological Sciences, University of Leeds, LS2 9JT, UK}
 \author{et al.}
@@ -72,9 +72,13 @@ Food system research is inherently transdisciplinary (\cite{drimie2013}; \cite{h
 
 Simplified models of complex systems elicit causal explanations and generate hypotheses of how systems work (\cite{smaldino2017}; \cite{smaldino2019}; \cite{otto2020}). Such \textit{stylised} models are staples of scientific disciplines such as ecology (\cite{may1973}), evolutionary biology (\cite{boyd2003}), epidemiology (\cite{kermack1927}), economics (\cite{nerlove1958}), and physics (\cite{strogatz1994}). Food systems research, however, lacks such foundational models. A potential candidate is research on commodity production cycles that has developed models to couple agricultural production, supply chains, consumer demand, price and human decision-making, such as \textcite{meadows1971}. These approaches have inspired systems dynamics modelling of general commodity and business cycles (\cite{sterman2000}). However, applications of systems dynamics models of commodity cycles are frequently high dimensional, encoding multiple modes of behaviour that are not easily amenable to standard mathematical analysis. Gaining greater theoretical insight into the dynamics of food systems and food security would be aided by simpler models of coupled agri-food systems.
 
-In this paper, we develop and analyse a stylised model of a food system inspired by the systems dynamics modelling of \textcite{meadows1971} and \cite{sterman2000}, but simple enough to offer general theoretical results. To limit our scope, we focus on modelling a national-level food system, where the effects of international trade on domestic production is examined. Like the stylised models used to understand the causal processes in evolution, epidemics, and ecological interactions, our approach necessarily ignores many important features of real food systems. Nonetheless, the simplicity of our model allows us to elucidate the precise conditions under which different stable modes of behaviour important to food security emerge in our system. As an example application, we apply our model to national-level data from the UK pig industry using Bayesian estimation.
+In this paper, we develop and analyse a stylised model of a food system inspired by the systems dynamics modelling of \textcite{meadows1971} and \cite{sterman2000}, but simple enough to offer general theoretical results. To limit our scope, we focus on modelling a national-level food system, where the effects of international trade on domestic production is examined. Like the stylised models used to understand the causal processes in evolution, epidemics, and ecological interactions, our approach necessarily ignores many important features of real food systems. Nonetheless, the simplicity of our model allows us to elucidate the precise conditions under which different stable modes of behaviour important to food security emerge in our system.
 
-\section{Theoretical model}
+We apply our theoretical model to the case of the UK pig industry. Historically, pig industries have been of much interest to economists and agronomists as one of the first investigations into business or `pork' cycles (\cite{haldane1934}; \cite{coase1935}; \cite{ezekiel1938}; \cite{harlow1960}; \cite{meadows1971}; \cite{zawadzka2010}; \cite{parker2014}; \cite{sterman2000}). Business cycles reflect the oscillations between commodity prices and supply, which have been posited to be the result of both endogeneous (e.g. \cite{nerlove1958}) and exogeneous mechanisms (e.g. see \cite{gouel2012}). In the last 20 years, the size of the UK pig industry has decreased markedly due to a combination of legislative, epidemiological, and trade-related issues (\cite{taylor2006}; \cite{dawson2009}). For example, in 1997, the UK breeding herd comprised around 800,000 sows, and domestic production exceeded imports. Following the ban on sow gestation crates in 1999, as well as disease outbreaks in the early 2000s, imports of pig meat increased by 50\% (\cite{DEFRApigcattlestats2020}), exceeding domestic production. While domestic production currently accounts for around 60-65\% of total supply (\cite{DEFRApigcattlestats2020}), the UK pig industry is still at risk from high costs of production (\cite{BPEXprofitability2011}) and `opportunistic dealing' within the pork supply chain favouring cheaper imports (\cite{bowman2013}). The sustainability of the UK pig industry is, thus, a prime concern for UK food security. As well as insights into the sustainability of the UK pig industry, we illustrate limitations of our stylised model for modelling real-world data sources.
+
+\section{Materials and methods}
+
+\subsection{Theoretical model}
 Our food system model is composed as a system of coupled ordinary differential equations, with the state variables of capital, inventory, consumer demand, and price. The general structure of our model is presented in Figure \ref{fig_cfs}, and Table \ref{t_symbols} provides the exact variable parameter definitions. Capital represents a raw component used to gauge the viability of the domestic industry, which could represent, for instance, the number of animals in the breeding herd for meat industries (e.g. \cite{meadows1971}), the number of paddy fields in rice supply chains (e.g. \cite{chung2018}), or infrastructure or equipment in neoclassical economic growth models (\cite{ngonghala2017}). Inventory is the stock of processed food commodity being investigated. Customer demand represents the amount of inventory demanded per time unit by the population of consumers. The commodity price represents the price received by producers per unit of commodity produced, and is taken to be directly proportional to the price presented to consumers (i.e. we do not account for retail mark-ups on price). While many of the mechanisms in supply chain functioning may be represented as a disrecte-time system, we assume the aggregate behaviour of the national-level food system is adequately approximated in continuous time by a system of differential equations.
 
 \begin{figure}[t!]
@@ -197,10 +201,19 @@ where $\{v, x, y, z\}$ now represent the dimensionless state variables, $\tau$ i
   \label{t_nd_symbols}
 \end{table}
 
-\section{Model analysis}
+\subsection{Data sources}
+A range of data is collected on the UK pig industry, but raw time series data is only available for certain variables and time frames. To fit our theoretical model, we focused on monthly data over a period of 5 years from 2015 to 2020, which covers the available data for prices per kilogram of deadweight (the `pig price'). Monthly pig prices were accessed through the Deparment for Environment, Food and Rural Affairs (DEFRA) webpage (\cite{DEFRAlivestockprices}), along with the June and December surveys of the size of breeding herd (\cite{DEFRAlivestocknumbers}). Monthly data for the inventory of pork, taking into account consumption and waste, is not reported in the UK. While customer demand is a theoretical quantity, we used the total monthly supplies of pig meat, calculated as domestic production of pig meat plus imported pig meat minus exported pig meat, as an indication of customer demand levels per month. Monthly data for UK production of pig meat was accessed from DEFRA (\cite{DEFRApigcattlestats2020}), while monthly imports and exports of pig meat was accessed from the Agricultural and Horticultural Development Board (\cite{AHDBpigmeatrade}). Missing data was considered missing completely at random (i.e. ignorable) because the missing data was not assumed to impact the accuracy of the available data. 
+
+\subsection{Bayesian estimation}
+The parameters of the model were estimated using Bayesian estimation in the probabilistic programming language Stan ()
+
+
+\section{Results}
+
+\subsection{Model analysis}
 While the mechanisms represented by the model are simple, it still comprises a four dimensional system of non-linear equations, of which there are no explict solutions. Nontheless, its dynamics can be summarised by investigating its stable modes of behaviour. To investigate stability, we conduct linear stability analyses (\cite{strogatz1994}). Linear stability analysis is based on a Taylor series expansion in multiple variables around the fixed points ($\{\hat{v}, \hat{x}, \hat{y}, \hat{z}\}$), where asymptotic (i.e. $t \rightarrow \infty$) stability to small perturbations can be inferred when the real part of the eigenvalues of the system's matrix of partial derivatives (the Jacobian matrix representing the linearisation around the fixed points) evaluated at each equilibrium are negative. Notably, the inverse of the leading eigenvalue of the Jacobian matrix determines the `characteristic return time' of the system, with more resilient systems returning more quickly to their equilibria following a disturbance (\cite{pimm1984}).
 
-\subsection{Without international trade}
+\subsubsection{Without international trade}
 When international trade is not present (i.e. $\kappa = 0$), there is one stable fixed point of the system given by the state variable values $\big \{\frac{\alpha(2\omega + \gamma)}{2 \delta (1 + \beta)}, \frac{\alpha}{1 + \beta}, \frac{\alpha}{1 + \beta}, \frac{1 + \beta}{\alpha}\big\}$. Another fixed point is where all state values are 0 (i.e. no industry). Conducting a linear stability analysis around the the latter fixed point, the eigenvalues of the Jacobian matrix at this equilibria are $\{(-1 - \beta), - \omega, - \mu, - \rho)\}$.
 Because all parameters are defined to be positive (except $\kappa$, which is $0$ here), there are no conditions where the `no industry' equilibria will be stable when international trade is absent. In other words, the domestic industry is always viable.
 
@@ -218,10 +231,8 @@ The Jacbobian matrix ($\boldsymbol{J}$) at this equilibria evalutes to:
 \end{equation}
 \fi
 
-\subsection{With international trade}
+\subsubsection{With international trade}
 When $0 < \kappa < 1$, international trade is possible, opening the possibility of competition between domestic and international products, or of an export market for domestic production. An unstable equilibria still exists where all state variables are 0. However, in addition, there is 1) an unsustainable domestic production equilibrium, where the food system is viable overall through complete reliance on international imports, and 2) a sustainable domestic production equilibrium, where the profitability of the domestic industry is high enough to compete with international trade.
-
-\subsubsection{Unsustainable domestic production}
 
 The unsustainable domestic production equilibria is given by the set of fixed points $\{0, \frac{\kappa \gamma}{\omega + \frac{\gamma}{2}}, \frac{\kappa \gamma}{\omega + \frac{\gamma}{2}}, \frac{\omega + \frac{\gamma}{2}}{\kappa \gamma}\}$. The Jacbobian matrix ($\boldsymbol{J}$) at this equilibria evalutes to:
 
@@ -253,30 +264,28 @@ By using the Routh-Hurwitz conditions, the sign of the remaning eigenvalues' rea
   \frac{ \alpha (\omega + \frac{\gamma}{2})}{\kappa \gamma(1+\beta)} < 1
 \end{equation}
 %
-The previous `critical ratio' can be loosely interpreted as a balance between $i$) the profitability of domestic production, weighted by both the wastage rate and capital growth rate, and $ii$) the strength of international trade, weighted by the domestic capital growth rate and domestic capital depreciation rate. The most influential parameters dictating the critical ratio's value are $\alpha$, $\kappa$ and $\beta$ (see Figure S1), where increases in $\alpha$ (the ratio of reference price to cost of production) increase the critical ratio, but increases in $\kappa$ (strength of trade) and $\beta$ (capital depreciation rate to growth rate ratio) decrease the critical ratio. Figure 1a illustrates the bifurcation diagram of the system as a function of $\alpha$.
+The previous `critical ratio' can be loosely interpreted as a balance between $i$) the profitability of domestic production, weighted by both the wastage rate and capital growth rate, and $ii$) the strength of international trade, weighted by the domestic capital growth rate and domestic capital depreciation rate. The most influential parameters dictating the critical ratio's value are $\alpha$, $\kappa$ and $\beta$ (see Figure S1), where increases in $\alpha$ (the ratio of reference price to cost of production) increase the critical ratio, but increases in $\kappa$ (strength of trade) and $\beta$ (capital depreciation rate to growth rate ratio) decrease the critical ratio. Figure 1a illustrates the bifurcation diagram of the dimensionless capital state variable as a function of $\alpha$.
 
 \begin{figure}[t!]
   \begin{subfigure}{0.5\textwidth}
-      \includegraphics[scale=0.7]{figure_2a.png}
+      \includegraphics[scale=0.6]{figure_2a.png}
   \end{subfigure}%
   ~%
   \begin{subfigure}{0.5\textwidth}
-      \includegraphics[scale=0.7]{figure_2b.png}
+      \includegraphics[scale=0.6]{figure_2b.png}
   \end{subfigure}
 
   \begin{subfigure}{0.5\textwidth}
-      \includegraphics[scale=0.7]{figure_2c.png}
+      \includegraphics[scale=0.6]{figure_2c.png}
   \end{subfigure}%
   ~%
   \begin{subfigure}{0.5\textwidth}
-      \includegraphics[scale=0.7]{figure_2d.png}
+      \includegraphics[scale=0.6]{figure_2d.png}
   \end{subfigure}%
 
   \caption{Stable modes of the model incorporating international trade ($0 < \kappa < 1$). Panel a shows the bifurcation diagram between stable (solid blue) and unstable (dashed black) behaviours (with $\beta$, $\gamma = 26$, $\omega = 10$, $\kappa = 0.5$, $\delta = 5$). Panels b-d show the stable modes of behaviour in ($\kappa, \alpha$) space for differing values of $\beta$ (b = 0.1, c = 0.6, d = 1), distinguishing between unsustianable (red), sustainable with imports (blue), and sustainable with exports (green) behaviours. Panels b-d are produced with the remaining parameters at $\gamma = 26$, $\omega = 10$ and $\delta = 5$.}
   \label{figure2}
 \end{figure}
-
-\subsubsection{Sustainable domestic production}
 
 When the critical ratio exceeds 1, the sustainable domestic production equilibrium is given by $\{\frac{2 \gamma \kappa (- 1 - \beta) + \alpha (\gamma + 2 \omega)}{2 \delta (1+\beta)(1 - \kappa) }, \frac{\alpha}{1 + \beta}, \frac{\alpha}{1 + \beta}, \frac{1 + \beta}{\alpha}\}$. In the latter case, the equilibrium values of inventory, demand and price are the same as the equilibrium values of the model without international trade (see above), determined by the profitability of the domestic industry and the ratio of capital depreciation and growth rates. The equilibrium value of capital is similar to the equilibrium value found in the model without international trade, but now increased by both the odds of international trade (i.e. $\frac{\kappa}{1-\kappa}$) but decreased by the term $ - 1 - \beta$, which is always negative for $\beta > 0$.
 The two equilibria are equal when $\kappa = 0$. Thus, if the critical ratio $> 1$ and domestic production is sustainable, trade strength alone has a positive effect on domestic capital keeping other parameters constant.
@@ -289,17 +298,26 @@ The latter result can also be viewed as a balance between two separate modes of 
 %
 Figures 1b-d demonstrate the relationship between the sustainable and unsustainable stable modes of behaviour in $(\kappa, \alpha)$ space for differing values of $\beta$, as well as the distinction between the sustainable state supplemented by imports, and the sustainable state requiring domestic production to be exported.
 
+\subsection{Application to UK pig industry}
+The parameter estimates for $a$, $k$ and $q$ are given in Table \ref{table_parameter_estimates}, and how the model results compare to the raw data is shown in Figure X. There is large uncertainty in the estimates, which is induced both by the tolerance thresholds for the ABC-MCMC algorithm, $\epsilon$, and because the amount of data available is relatively small to inform the parameter values. Importantly, the critical ratio is plausibly above 1 (although its 95\% HDI approaches 1) suggesting that the the UK pig industry is currently sustainable.
 
-
-
-\section{Application: the UK pig industry}
-
-\subsection{Model estimation}
-
-
+\begin{table}[t!]
+  \centering
+  \footnotesize
+  \begin{tabular}{p{5cm}p{2cm}p{3cm}p{2cm}}
+    \textbf{Parameter} & \textbf{Mean} & \textbf{95\% HDI} & \textbf{ESS} \\ \hline
+    $a$ & 0.12 & [0.05, 0.19] & 18,071 \\
+    $k$ & 0.44 & [0.18, 0.69] & 4,232 \\
+    $q$ & 146.72 & [122.50, 170.44] & 3,104 \\
+    critical ratio & 2.06 & [1.10, 2.96] & 13,598 \\
+  \end{tabular}
+  \caption{Key parameter estimates (mean and 95\% highest density interval, HDI) and effective sample sizes (ESS) from fitting the model to the UK pig industry data.}
+  \label{table_parameter_estimates}
+\end{table}
 
 \section{Discussion}
 
+\subsection{Limitations}
 
 
 \newpage
