--- a/paper/cfs-model-refs.bib
+++ b/paper/cfs-model-refs.bib
@@ -1,3 +1,30 @@
+@Manual{rcoreteam2020,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2020},
+    url = {https://www.R-project.org/},
+  }
+
+@Misc{stan2019,
+   title = {{RStan}: the {R} interface to {Stan}},
+   author = {{Stan Development Team}},
+   note = {R package version 2.19.2},
+   year = {2019},
+   url = {http://mc-stan.org/},
+ }
+
+@article{carpenter2017,
+  title={Stan: A probabilistic programming language},
+  author={Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Marcus and Guo, Jiqiang and Li, Peter and Riddell, Allen},
+  journal={Journal of statistical software},
+  volume={76},
+  number={1},
+  year={2017},
+  publisher={Columbia Univ., New York, NY (United States); Harvard Univ., Cambridge, MA~…}
+}
+
 @article{aschemann2016,
   title={Waste not, want not, emit less},
   author={Aschemann-Witzel, Jessica},
